# AiDA

./: .gitignore  AiDA_loader.py  CMakeLists.txt  Dockerfile  LICENSE  README.md  SETUP.md  actions.cpp  actions.hpp  ai_client.cpp  ai_client.hpp  aida.cpp  aida.hpp  aida_pro.hpp  ida-plugin.json  ida_utils.cpp  ida_utils.hpp  prompts.hpp  pyproject.toml  settings.cpp  settings.hpp  ui.cpp
.github/workflows/: build-and-release.yml
AiDA/: AiDA.sln  actions.py  plugin.py  ui.py
AiDA/AiDA/: AiDA.vcxproj  AiDA.vcxproj.filters
AiDA/ai/: __init__.py  anthropic_client.py  base_client.py  gemini_client.py  openai_client.py  prompts.py
AiDA/core/: __init__.py  ida_utils.py  settings.py
AiDA/patterns/: __init__.py
libs/cpp-httplib/: CMakeLists.txt
python/: AiDA_MCP.py  __init__.py  idalib_server.py  server.py
src/: CMakeLists.txt  actions.cpp  actions.hpp  ai_client.cpp  ai_client.hpp  aida.cpp  aida.hpp  aida_pro.hpp  ida_utils.cpp  ida_utils.hpp  prompts.hpp  settings.cpp  settings.hpp  ui.cpp
