[project]
name = "aida"
version = "1.4.0"
description = "Vibe reversing with IDA Pro"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "mrexodia" }, { name = "sigwl" }]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "mcp>=1.6.0",
]

[project.urls]
Repository = "https://github.com/sigwl/AiDA"
Issues = "https://github.com/sigwl/AiDA/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "idalib_server", "AiDA_MCP"]

[tool.setuptools.package-dir]
"" = "python"

[dependency-groups]
dev = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
AiDA = "server:main"
idalib-mcp = "idalib_server:main"
